# aws-enumerator

./: .gitignore  Dockerfile  LICENSE  pyproject.toml  readme.md
.github/workflows/: docker-publish.yml
app/: main.py
app/components/: cloudfront.py  cloudtrail.py  ec2.py  eks.py  flowlogs.py  iam.py  k8s.py  policy_parser.py  s3.py  secretsmanager.py  sg.py  ssm.py  vpc.py  waf.py
app/utils/: aws_utils.py  eks_auth.py  regions.json
dashboard/: index.html
docs/: attack_paths.md
scripts/: docker-run.sh
