[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-enumerator"
version = "0.2.0"
description = "AWS attack graph tool - enumerate, analyze, and visualize AWS attack surfaces"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "0xj4f"}
]
keywords = ["aws", "security", "enumeration", "attack-graph", "offensive-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "boto3",
]

[project.urls]
Homepage = "https://github.com/0xj4f/aws-enumerator"
Repository = "https://github.com/0xj4f/aws-enumerator"

[project.scripts]
aws-enumerator = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.utils" = ["regions.json"]
